Perfil Page Create

--- a/src/components/CardModal/CardModal.styles.css
+++ b/src/components/CardModal/CardModal.styles.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+/* .modal-overlay {
   position: fixed;
   top: 0%;
   right: 0%;
@@ -17,4 +17,4 @@
   bottom: 30%;
   background-color: white;
   color: black;
-}
+} */
