--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background-color: #111;
+  background-color: #ccc;
 }
 
 .wrap-login {
